--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
               </ul>
             </div>
           </nav>
+          <center>
           <p1> TEST TEST </p1>    
+          </center>
       <!--JavaScript at end of body for optimized loading-->
 
 
