--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div class="nav-wrapper">
               <a href="index.html" class="brand-logo">SierraDev9285</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="detnsw.html">Adventures into DETNSW DER And eT4L</a></li>
                 <li><a href="software.html">Software</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
