--- a/detnsw.html
+++ b/detnsw.html
@@ -23,7 +23,7 @@
               </ul>
             </div>
           </nav>
-              
+              <center><h1 class="white-text" >DETNSW DER And eT4L </h1> </center>
       <!--JavaScript at end of body for optimized loading-->
 
 
