--- a/detnsw.html
+++ b/detnsw.html
@@ -23,7 +23,11 @@
               </ul>
             </div>
           </nav>
-              <center><h1 class="white-text" >DETNSW DER And eT4L </h1> </center>
+              <center>
+                <h1 class="white-text" >DETNSW DER And eT4L</h1> 
+                <h2 class="white-text" >A Screwed up system from the NSW Gov</h2> 
+              
+              </center>
       <!--JavaScript at end of body for optimized loading-->
 
 
