--- a/detnsw.html
+++ b/detnsw.html
@@ -24,7 +24,7 @@
             </div>
           </nav>
               <center>
-                <h1 class="white-text" >THE DETNSW, DER And eT4L</h1> 
+                <h1 class="white-text" >DETNSW DER And eT4L</h1> 
                 <h2 class="white-text" >A Screwed up system from the NSW Gov</h2> 
               
               </center>
