--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </nav>
           <center>
           <h1 class="white text">Welcome to the SierraDev9285 Website</h1>
-          <div class="tenor-gif-embed" data-postid="9887926" data-share-method="host" data-width="100%" data-aspect-ratio="1.3736263736263736"><a href="https://tenor.com/view/sailor-moon-donut-chomp-eat-gif-9887926">Sailor Moon Donut GIF</a> from <a href="https://tenor.com/search/sailormoon-gifs">Sailormoon GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+          <img src="assets/media/photos/SM.gif"> 
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
