--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
           </nav>
           <center>
-          <h1 class="white text">Welcome to the SierraDev9285 Website</h1>
+          <h1 class="white-text">Welcome to My Website</h1>
           <img src="assets/media/photos/SM.gif"> 
           </center>
       <!--JavaScript at end of body for optimized loading-->
