--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <center>
           <h1 class="white-text">Welcome to My Website</h1>
           <img src="assets/media/photos/SM.gif"> 
+          <p class="white-text">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
