--- a/index.html
+++ b/index.html
@@ -36,25 +36,21 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text">Sierra Serenity</h5>
+            <p class="grey-text text-lighten-4">V1.0 2019 Made with love</p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">About Me</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Adventures into DETNSW DER And eT4L</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Software</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Contact Me</a></li>
+              <li><a class="white-text" href="#!">Blog</a></li>
+              <li><a class="white-text" href="#!">About Me</a></li>
+              <li><a class="white-text" href="#!">Adventures into DETNSW DER And eT4L</a></li>
+              <li><a class="white-text" href="#!">Software</a></li>
+              <li><a class="white-text" href="#!">Contact Me</a></li>
             </ul>
           </div>
         </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>  
         </div>
       </div>
     </footer>
