--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <center>
           <h1 class="white-text">Welcome to My Website</h1>
           <img src="assets/media/photos/SM.gif"> 
-          <p class=" blue-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
+          <p class=" white-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Sierra Serenity</h5>
-            <p class="grey-text text-lighten-4">V1.0 2019 Made with love</p>
+            <p class="white-text ">V1.0 2019 Made with love</p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
