--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body background="assets/media/photos/background.png">
 
-        <nav class="light-blue darken-3">
+        <nav class="grey darken-3">
             <div class="nav-wrapper">
               <a href="index.html" class="brand-logo">SierraDev9285</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
