--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
         </div>
       </div>
     </footer>
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.dropdown-trigger');
-    var instances = M.Dropdown.init(elems, options);
-  });
-    </script>
+    <script src="jquery-3.4.0.min.js"></script>
+    <script>  $('.dropdown-trigger').dropdown(); </script>
     </body>
   </html>
