--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </footer>
-    <script src="jquery-3.4.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script>  $('.dropdown-trigger').dropdown(); </script>
     </body>
   </html>
