--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
               <li><a class="white-text" href="#!">Adventures into DETNSW DER And eT4L</a></li>
               <li><a class="white-text" href="#!">Software</a></li>
               <li><a class="white-text" href="#!">Contact Me</a></li>
+              <a class="waves-effect waves-light btn">Dark Mode</a>
+              <a class="waves-effect waves-light btn">Light Mode</a>
             </ul>
           </div>
         </div>
