--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script>   
-     document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.fixed-action-btn');
-    var instances = M.FloatingActionButton.init(elems, options);
+    $(document).ready(function(){
+    $('.fixed-action-btn').floatingActionButton();
   });
 
       </script>
