--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script>   
-    $(document).ready(function(){
-    $('.fixed-action-btn').floatingActionButton();
+    <script >   
+    document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.fixed-action-btn');
+    var instances = M.FloatingActionButton.init(elems, {
+      direction: 'left',
+      hoverEnabled: false
+    });
   });
 
       </script>
