--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="contact.html">Contact Me</a></li>
                 
 <div class="fixed-action-btn">
-    <a class="btn-floating btn-large grey darken-3">
+    <a class="btn-floating btn-large red">
       <i class="large material-icons">mode_edit</i>
     </a>
     <ul>
