--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     </head>
 
     <body background="assets/media/photos/background.png">
-
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+    <li><a href="#!">one</a></li>
+    <li><a href="#!">two</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">three</a></li>
+  </ul>
         <nav class="grey darken-3">
             <div class="nav-wrapper">
               <a href="index.html" class="brand-logo">SierraDev9285</a>
@@ -20,7 +26,8 @@
                 <li><a href="detnsw.html">Adventures into DETNSW DER And eT4L</a></li>
                 <li><a href="software.html">Software</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
-                
+                <!-- Dropdown Trigger -->
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
 <div class="fixed-action-btn">
     <a class="btn-floating btn-large red">
       <i class="large material-icons">mode_edit</i>
