--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
     <script >   
      
 
-$(document).ready(function(){
-  $(".dropdown-trigger").dropdown();
-  });     
+     $('.dropdown-trigger').dropdown(); 
       </script>
     </body>
   </html>
