--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script >   
-     
 
-     $('.dropdown-trigger').dropdown(); 
+document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.dropdown-trigger');
+    var instances = M.Dropdown.init(elems, options);
+  });
       </script>
     </body>
   </html>
