--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <body background="assets/media/photos/background.png">
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">one</a></li>
-    <li><a href="#!">two</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">three</a></li>
+    <li><a href="#!">Dark Mode</a></li>
+    <li><a href="#!"><i class="material-icons">cloud</i>Light Mode</a></li>
+    
   </ul>
         <nav class="grey darken-3">
             <div class="nav-wrapper">
