--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body background="assets/media/photos/background.png">
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Dark Mode</a></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>Light Mode</a></li>
+    <li><a href="#!"><i class="material-icons">brightness_3</i>Dark Mode</a></li>
+    <li><a href="#!"><i class="material-icons">brightness_high</i>Light Mode</a></li>
     
   </ul>
         <nav class="grey darken-3">
