--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
           </nav>
           <center>
-          <h1 class="white-text">Welcome to My Website</h1>
-          <img src="assets/media/photos/SM.gif"> 
-          <p class=" white-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
+          <h1 class="white-text">DETNSW,DER And eT4L</h1>
+          <h2 class="white-text">One of the worst decisions that the NSW Government made</h2>
+          <p class=" white-text ">The Deparment Of Education And Training New South Wales or for short DETNSW is the NSW state school deparment now what is so bad about that you say well there is nothing wrong with it however the tech team ITD or the Infomation Technoligy Directe they create the systems that DETNSW use though the schools</p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
