--- a/detnsw.html
+++ b/detnsw.html
@@ -32,6 +32,7 @@
           <center>
               <h1 class="white-text">DETNSW,DER And eT4L</h1>
               <h2 class="white-text">One of the worst decisions that the NSW Government made</h2>
+              <img src="assets/media/photos/DETNSW.png"> 
               <p class=" white-text ">The Deparment Of Education And Training New South Wales or for short DETNSW is the NSW state school deparment now what is so bad about that you say well there is nothing wrong with it however the tech team ITD or the Infomation Technoligy Directe they create the systems that DETNSW use though the schools</p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
