--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
-  <footer class="page-footer">
+  <footer id="footer01" class="page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -61,6 +61,32 @@
         </div>
       </div>
     </footer>
+  
+    <script>
+    html,
+        body {
+           margin:0;
+           padding:0;
+           height:100%;
+        }
+        div {
+            outline: 1px solid;
+        }
+        #con {
+           min-height:100%;
+           position:relative;
+        }
+        #content {
+           height: 1000px; /* Changed this height */
+           padding-bottom:60px;
+        }
+        #footer01 {
+           position:absolute;
+           bottom:0;
+           width:100%;
+           height:60px;
+        }</script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     </body>
   </html>
