--- a/index.html
+++ b/index.html
@@ -63,29 +63,13 @@
     </footer>
   
     <script>
-    html,
-        body {
-           margin:0;
-           padding:0;
-           height:100%;
-        }
-        div {
-            outline: 1px solid;
-        }
-        #con {
-           min-height:100%;
-           position:relative;
-        }
-        #content {
-           height: 1000px; /* Changed this height */
-           padding-bottom:60px;
-        }
-        #footer01 {
+        #footer01{
            position:absolute;
            bottom:0;
            width:100%;
            height:60px;
-        }</script>
+        }
+        </script>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     </body>
