--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body background="assets/media/photos/background.png">
 
-    
+    <div id="results">
   </ul>
         <nav class="grey darken-4">
             <div class="nav-wrapper">
@@ -35,6 +35,8 @@
           <img src="assets/media/photos/SM.gif"> 
           <p class=" white-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
           </center>
+
+        </div>
       <!--JavaScript at end of body for optimized loading-->
 
 
