--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
 
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
  
-    
+  <script>
+      $(document).ready(function(){$(".button-collapse").sideNav();$('.modal-trigger').leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
+      </script>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     </body>
