--- a/about.1.html
+++ b/about.1.html
@@ -223,7 +223,7 @@
   
   
   <script>
-  $(document).ready(function(){$(".button-collapse").sideNav();$('.modal-trigger').leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
+  $(document).ready(function(){$(".button-collapse").leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
   </script>
 
 </body>
