--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
  
   <script>
-      $(document).ready(function(){$(".button-collapse").sideNav();$('.modal-trigger').leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
+      $(document).ready(function(){$(".button-collapse").leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
       </script>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </body>
   </html>
