--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
-      (document).ready(function(){$(".button-collapse").leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
+      $(document).ready(function(){$(".button-collapse").leanModal();$('#push,secton').pushpin({ top:$('#push').height() });})
       </script>
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
