--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script>
-      $(document).ready(function(){$(".button-collapse").pushpin({ top:$('#push').height() });})
+     $(document).ready(function(){
+    $('.pushpin').pushpin();
+  });
       </script>
     
 
