--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script>
-     $(document).ready(function(){
-    $('.pushpin').pushpin();
+     document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.pushpin');
+    var instances = M.Pushpin.init(elems, options);
   });
       </script>
     
