--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit ame
   <script>
      document.addEventListener('DOMContentLoaded', function() {
     var elems = document.querySelectorAll('.pushpin');
-    var instances = M.Pushpin.init(elems, options);
+    var instances = M.pushpin.init(elems, options);
   });
       </script>
     
