--- a/index.html
+++ b/index.html
@@ -47,20 +47,34 @@ Integer vulputate, metus non faucibus aliquam, tellus augue commodo justo, et vo
 Aliquam volutpat velit et elementum tristique. Mauris neque orci, cursus sit amet velit ac, porta pharetra felis. Fusce sit amet felis sit amet tortor imperdiet accumsan eget vitae nunc. Vestibulum scelerisque elementum erat, in luctus dolor mollis eu. Nam elementum ut tortor vitae congue. Integer commodo lectus fringilla sodales venenatis. Nam cursus quis turpis ut tempus. Cras auctor lacus libero, vitae semper tellus rhoncus at. Nunc commodo purus ultrices quam rutrum, vel ultrices orci feugiat. Quisque turpis metus, cursus et ipsum ut, luctus efficitur nisl. Curabitur egestas suscipit scelerisque. Praesent vulputate urna laoreet accumsan aliquam. 
           </p>
           </center>
-
+          <footer class="page-footer">
+              <div class="container">
+                <div class="row">
+                  <div class="col l6 s12">
+                    <h5 class="white-text">Sierra Serenity</h5>
+                    <p class="white-text ">V1.0 2019 Made with love</p>
+                  </div>
+                  <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                      <li><a class="white-text" href="#!">Blog</a></li>
+                      <li><a class="white-text" href="#!">About Me</a></li>
+                      <li><a class="white-text" href="#!">Adventures into DETNSW DER And eT4L</a></li>
+                      <li><a class="white-text" href="#!">Software</a></li>
+                      <li><a class="white-text" href="#!">Contact Me</a></li>
+                      
+                    </ul>
+                  </div>
+                </div>
+              </div>  
+                </div>
+              </div>
+            </footer>
 
       <!--JavaScript at end of body for optimized loading-->
 
 
   <script type="text/javascript" src="assets/js/SierraDevJS.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script>
-     document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.pushpin');
-    var instances = M.Pushpin.init(elems,);
-  });
-      </script>
-    
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>  
     </body>
   </html>
