--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"> 
       <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="assets/css/googlefont.css"/>
       <!--Import CSS-->
       <link type="text/css" rel="stylesheet" href="assets/css/SierraDevCSS.css"  media="screen,projection"/>
      
