--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </ul>
         <nav class="grey darken-4">
             <div class="nav-wrapper">
+                <img src="assets/media/photos/SMNavBar.png"> 
               <a href="index.html" class="brand-logo">SierraDev9285</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="about.html">About Me</a></li>
