--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link type="text/css" rel="stylesheet" href="assets/css/googlefont.css"/>
       <!--Import CSS-->
       <link type="text/css" rel="stylesheet" href="assets/css/SierraDevCSS.css"  media="screen,projection"/>
-     
+      <link rel="icon" href="assets/media/photos/SM.gif" type="image/gif" >
 
      <title>Sierra Serenity</title>
     </head>
