--- a/software.html
+++ b/software.html
@@ -30,10 +30,10 @@
             </div>
           </nav>
           <center>
-          <h1 class="white-text">Welcome to My Website</h1>
-          <img src="assets/media/photos/SM.gif"> 
-          <p class=" white-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
-          </center>
+          <h1 class="white-text">Software</h1>
+        </center>
+          <p id="DETNSWBE" class=" white-text ">DETNSW Boot Exploit</p>
+       
       <!--JavaScript at end of body for optimized loading-->
 
 
