--- a/software.html
+++ b/software.html
@@ -33,7 +33,7 @@
           <h1 class="white-text">Software</h1>
         </center>
           <p id="DETNSWBE" class=" white-text ">DETNSW Boot Exploit</p>
-       
+          <img src="assets/media/photos/DET.PNG"> 
       <!--JavaScript at end of body for optimized loading-->
 
 
