--- a/software.html
+++ b/software.html
@@ -35,7 +35,7 @@
           <p id="DETNSWBE" class=" white-text ">DETNSW Boot Exploit</p>
           <img src="assets/media/photos/DET.PNG"> 
           <p id="DETNSWBE2" class=" white-text ">DETNSW Left there boot loader unlocked without a password this lets you boot anything you want on eT4L PC's this exploit patches Sethc.exe with CMD.exe that allows the user to be able to create an admin user on the local PC that will be able to install <b>ANYTHING</b> on a eT4L PC without any DETNSW.WIN Domain Admin passwords! </p>
-          <p><b>Not Ready yet!</b></p>
+          <p class="white-text"><b><u>Not Ready yet!</u></b></p>
           <!--JavaScript at end of body for optimized loading-->
 
 
