--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
             </div>
           </nav>
           <center>
-          <h1 class="white-text">Welcome to My Website</h1>
-          <img src="assets/media/photos/SM.gif"> 
-          <p class=" white-text ">My name is Sierra Serenity i go by the name SierraDev online im a transgender girl living my life with tech and friends i hope you enjoy my site </p>
+          <h1 class="white-text">Contact Me</h1>
+          <img src="assets/media/photos/CMSM.gif"> 
+          <p class=" white-text "><b>Discord</b>SierraDev#0001</p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
