--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     
   </ul>
-        <nav class="grey darken-3">
+        <nav class="grey darken-4">
             <div class="nav-wrapper">
               <a href="index.html" class="brand-logo">SierraDev9285</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -32,8 +32,10 @@
           <center>
           <h1 class="white-text">Contact Me</h1>
           <img src="assets/media/photos/CMSM.gif"> 
+        </center>
+          <img src="assets/media/photos/Discord.png"> 
           <p class=" white-text "><b>Discord</b>SierraDev#0001</p>
-          </center>
+          
       <!--JavaScript at end of body for optimized loading-->
 
 
