--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
           <h1 class="white-text">Contact Me</h1>
           <img src="assets/media/photos/CMSM.gif"> 
         </center>
-          <img src="assets/media/photos/Discord.png"> 
-          <p class=" white-text "><b>Discord</b>SierraDev#0001</p>
+          
+          <img src="assets/media/photos/Discord.png">  <p class=" white-text "><b>Discord</b>SierraDev#0001</p>
           
       <!--JavaScript at end of body for optimized loading-->
 
