--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </ul>
         <nav class="grey darken-4">
             <div class="nav-wrapper">
-              <a href="index.html" class="brand-logo">SierraDev9285</a>
+              <a href="index.html" class="brand-logo">Sierra Serenity</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="blog.html">Blog</a></li>
