--- a/software.html
+++ b/software.html
@@ -6,7 +6,9 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import CSS-->
       <link type="text/css" rel="stylesheet" href="assets/css/SierraDevCSS.css"  media="screen,projection"/>
+      <link rel="icon" href="assets/media/photos/SM.gif" type="image/gif" >
 
+      <title>Sierra Serenity</title>
      
     </head>
 
