--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
       <!--Import CSS-->
       <link type="text/css" rel="stylesheet" href="assets/css/SierraDevCSS.css"  media="screen,projection"/>
 
-     
+      <link rel="icon" href="assets/media/photos/SM.gif" type="image/gif" >
+
+      <title>Sierra Serenity</title>
     </head>
 
     <body background="assets/media/photos/background.png">
@@ -32,7 +34,7 @@
           <center>
           <h1 class="white-text">Welcome to My Website</h1>
           <img src="assets/media/photos/SM.gif"> 
-          <p class=" white-text ">My name is Sierra Serenity im a transgender girl Male To Female Year 10 kid living in australia i love tech and run my own dev team i also like marvel and anime if you could not tell with all the Sailor Moon i also love Sailor Moon UwU if you ever need help <a href="contact.html">  Contact me</a>   </p>
+          <p class=" white-text ">My name is Sierra Serenity im a transgender girl Male To Female Year 10 kid living in australia i love tech and run my own dev team i also like marvel and anime if you could not tell with all the Sailor Moon i also love Sailor Moon UwU if you ever need help <a href="contact.html">Contact me</a></p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
