--- a/detnsw.html
+++ b/detnsw.html
@@ -7,7 +7,9 @@
       <!--Import CSS-->
       <link type="text/css" rel="stylesheet" href="assets/css/SierraDevCSS.css"  media="screen,projection"/>
 
-     
+      <link rel="icon" href="assets/media/photos/SM.gif" type="image/gif" >
+
+      <title>Sierra Serenity</title>
     </head>
 
     <body background="assets/media/photos/background.png">
