--- a/detnsw.html
+++ b/detnsw.html
@@ -35,7 +35,9 @@
               <h1 class="white-text">DETNSW,DER And eT4L</h1>
               <h2 class="white-text">One of the worst decisions that the NSW Government made</h2>
               <img src="assets/media/photos/DETNSW.png"> 
-              <p class=" white-text ">The Deparment Of Education And Training New South Wales or for short DETNSW is the NSW state school deparment now what is so bad about that you say well there is nothing wrong with it however the tech team ITD or the Infomation Technoligy Directe they create the systems that DETNSW use though the schools</p>
+              <p class=" white-text ">The Deparment Of Education And Training New South Wales or for short DETNSW is the NSW state school deparment now what is so bad about that you say well there is nothing wrong with it however the tech team ITD or the Infomation Technoligy Directe they create the systems that DETNSW use though the schools however since 2012 when the eT4L program was rolled out thoughout NSW they had one fatal flaw they left the boot loader unlocked
+              after a couple days of work i had a working batch file to create an admin account on ALL eT4L Computers to date 5/25/2019 this has not been patched i also found out that PXE will try and boot to be able reinstall a custom windows image though SCCM MDT and WDS im working on a GUI version for the boot exploit with MiniXP 
+              </p>
           </center>
       <!--JavaScript at end of body for optimized loading-->
 
