--- a/detnsw.html
+++ b/detnsw.html
@@ -21,7 +21,7 @@
         <a href="index.html" class="brand-logo">Sierra Serenity</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="/wordpress">Blog</a></li>
           <li><a href="detnsw.html">Adventures into DETNSW DER And eT4L</a></li>
           <li><a href="software.html">Software</a></li>
           <li><a href="contact.html">Contact Me</a></li>
